# xous-core

./: Cargo.toml
apps/: manifest.json
apps/xtotp/: Cargo.toml  Makefile  shell.nix
apps/xtotp/fbs/: xtotp.fbs
apps/xtotp/src/: #main.rs#  .#main.rs  main.rs  xtotp_generated.rs
