[package]
name = "xtotp"
version = "0.1.0"
edition = "2021"

[dependencies]
digest = "0.9"

# We need a software fallback for Hmac calculations that the
 # OpenTitan HMAC core does not support.
crypto-common = "0.1.3"
hmac = "0.12.1"
flatbuffers = "2.1.1"

# So many vendors still unfortunately use hmac-sha1 as the
# hash function for totp computations, so we need a software
# fallback.
sha-1 = "0.10.0"
log = "0.4.14"
num-derive = {version = "0.3.3", default-features = false}
num-traits = {version = "0.2.14", default-features = false}
pddb = {path = "../../services/pddb" }
xous = { path = "../../xous-rs" }
xous-ipc = { path = "../../xous-ipc" }
log-server = { path = "../../services/log-server" }
xous-names = { path = "../../services/xous-names" }
gam = {path = "../../services/gam" }
graphics-server = {path = "../../services/graphics-server" }

